--- a/components/case-study/CaseStudySidebar.module.css
+++ b/components/case-study/CaseStudySidebar.module.css
@@ -7,6 +7,13 @@
   align-self: start;
 }
 
+@media (max-width: 860px) {
+  .sidebar {
+    position: static;
+    order: 1;
+  }
+}
+
 .card {
   position: relative;
   background: #fff;
